Redefine books as user relations
